# RNAView

./: .gitignore  Makefile  README.md  test.sh  test_phase2.sh
.devcontainer/: devcontainer.json
doc/: python-port.md  spec.md
golden_core/mmcif/insertion_code/1VVJ/: 1VVJ.cif.core.json
golden_core/mmcif/insertion_code/4ARC/: 4ARC.cif.core.json
golden_core/mmcif/other/6pom/: 6pom.cif.core.json
golden_core/pdb/pdb1nvy/: pdb1nvy.ent.core.json
golden_core/pdb/test1/: test1.pdb.core.json
golden_core/pdb/url064/: url064.pdb.core.json
golden_core/pdb/urx053/: urx053.pdb.core.json
include/: rna_header.h  rnaview_profile.h
rust/: Cargo.toml  README.md
rust/src/: legacy_ffi.rs  lib.rs  main.rs  out_full.rs  structure.rs
src/: fpair.c  pair_type.c  rnaview.c  rnaview_profile.c
test/golden_core/: manifest.json
test/golden_core/pdb/test/: test.pdb.core.json
test/golden_core/pdb/tr0001/: tr0001.pdb.core.json
test/mmcif/insertion_code/1EFW/: 1EFW.CIF.ps
test/mmcif/insertion_code/1VVJ/: 1VVJ.cif.ps
test/mmcif/insertion_code/4ARC/: 4ARC.CIF.ps
test/mmcif/nmr_structure/8if5/: 8if5.cif.ps
test/pdb/pdb1nvy/: pdb1nvy.pdb.ps
test/pdb/test1/: test1.pdb.ps
test/pdb/tr0001/: tr0001.pdb.ps
test/pdb/url064/: url064.pdb.ps
test/pdb/urx053/: urx053.pdb.ps
tools/: build_legacy_rnaview.sh  build_rnaview_rustcore.sh  build_rnaview_rustcore_release.sh  cargo_sysroot.sh  rnaview_batch.py  rnaview_bench.py  rnaview_out_core.py  rnaview_pairs_json.py  test_rnaview_batch.py  test_rnaview_out_core.py  test_rnaview_pairs_json.py
(+11 files in other folders)
